--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-ATLAS_URI =mongodb+srv://maitrik:maitrik123@cluster0.qvlwtom.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+ATLAS_URI =mongodb+srv://test:test111@cluster0.qvlwtom.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
 JWT_SECRET_KEY = secretkey1212
